2025-09-24 Populating the database achieved

--- a/sqitch.conf
+++ b/sqitch.conf
@@ -1,8 +1,24 @@
 [core]
 	engine = pg
 	top_dir = pg
+	pager = more
 	# plan_file = pg/sqitch.plan
-# [engine "pg"]
-	# target = db:pg:
+
+[engine "pg"]
+	# The default target used if you just run `sqitch deploy`
+	target = db:pg://localhost/patrick_dev
 	# registry = sqitch
 	# client = psql
+
+[target "dev"]
+	uri = db:pg://localhost/patrick_dev
+
+[target "test"]
+	uri = db:pg://localhost/patrick_tst
+
+[target "prod"]
+	uri = db:pg://localhost/patrick
+[deploy]
+	verify = true
+[rebase]
+	verify = true
