--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Default template for PDM package"
 authors = [
     {name = "Patrick Allan", email = "patrick29501@gmx.com"},
 ]
-dependencies = ["environs>=14.3.0", "loguru>=0.7.3", "sqlalchemy>=2.0.43", "psycopg>=3.2.10", "wand>=0.6.13", "python-magic>=0.4.27"]
+dependencies = ["environs>=14.3.0", "loguru>=0.7.3", "sqlalchemy>=2.0.43", "psycopg>=3.2.10", "wand>=0.6.13", "python-magic>=0.4.27", "xdg-base-dirs>=6.0.2", "Typer>=0.19.2"]
 requires-python = "==3.13.*"
 readme = "README.md"
 license = {text = "MIT"}
@@ -17,4 +17,5 @@ distribution = false
 [dependency-groups]
 dev = [
     "faker>=37.8.0",
+    "pytest-mock>=3.15.1",
 ]
